submessage alignment fix.

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -918,7 +918,7 @@ label {
     // overflow-y: auto;
     overflow-x: hidden;
     // max-height: 513px;
-    padding: 0px $bchat-margin-md 0px 15px;
+    padding: 0px $bchat-margin-md 0px 20px;
   }
 
   &__deleteAccountModal {
@@ -1159,7 +1159,7 @@ label {
 
   &-bchatConfirm {
     width: 425px;
-    margin: 0px 0px 25px 5px;
+    margin: 0px 0px 25px 0%;
     font-family: $bchat-font-default;
     font-size: 16px;
     text-align: left;
